=======
CHANGES
=======


0.3 (unreleased)
----------------


0.2 (2008-08-29)
----------------

* Eggified package
* Added buildout files and general text documents to project root.
* removed setup.cfg