@@ -1,0 +1,14 @@
+<configure xmlns="http://namespaces.zope.org/zope"
+           xmlns:plone="http://namespaces.plone.org/plone">
+
+  <include package="plone.app.portlets" />
+
+  <plone:portlet
+      name="getpaid.cart"
+      interface="Products.PloneGetPaid.browser.portlets.cart.ICartPortlet"
+      assignment="Products.PloneGetPaid.browser.portlets.cart.Assignment"
+      renderer=".cart.Renderer"
+      addview="Products.PloneGetPaid.browser.portlets.cart.AddForm"
+      />
+
+</configure>
