@@ -6,6 +6,8 @@ CHANGES
 0.3 (unreleased)
 ----------------
 
+* Override the cart portlet to use Google Checkout.
+
 
 0.2 (2008-08-29)
 ----------------
